--- a/wiki/pl/Macros_recipes.html
+++ b/wiki/pl/Macros_recipes.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macros recipes/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macros+recipes&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrorezepte (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--high" title="Makrorezepte (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macros_recipes.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macros recipes (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--low" title="Macros recipes (1% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--complete" title="Liste des macros (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -90,9 +90,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Applications-python.svg&amp;filetimestamp=20250123011430&amp;.html" class="mw-file-description"><img src="../File/Applications-python.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Macro_Iges_PyImporter.html" title="Macro Iges PyImporter/pl">Makro Iges PyImporter</a></span>: Importuje plik formatu iges z jednostk&#261; 128, na przyk&#322;ad plik iges z FreeShip, do FreeCAD.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_MeshToPart.png&amp;filetimestamp=20190614154950&amp;.html" class="mw-file-description"><img src="../File/Macro_MeshToPart.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Macro_MeshToPart.html" title="Macro MeshToPart/pl">Macro MeshToPart</a></span>: Konwertuje wybrane siatki na cz&#281;&#347;ci.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=MultiCopy-reduced.png&amp;filetimestamp=20210317163135&amp;.html" class="mw-file-description"><img src="../File/MultiCopy-reduced.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Macro_MultiCopy.html" title="Macro MultiCopy/pl">Makro MultiCopy</a></span>: Funkcja MultiCopy umo&#380;liwia powielanie <i>(kopiowanie i wklejanie)</i> wielu obiekt&oacute;w FreeCAD, kt&oacute;re mo&#380;na etykietowa&#263; kolejno i w niestandardowy spos&oacute;b.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Multi_Export.png&amp;filetimestamp=20260106011316&amp;.html" class="mw-file-description"><img src="../File/Macro_Multi_Export.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Multi_Export.html" title="Macro Multi Export">Macro Multi Export</a></span>: This macro makes it much quicker to export models in multiple 3D printing formats with one simple command.</li></ul>
-</div>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Multi_Export.png&amp;filetimestamp=20260106011316&amp;.html" class="mw-file-description"><img src="../File/Macro_Multi_Export.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Multi_Export.html" title="Macro Multi Export">Makro Multi Export</a></span>: To makro znacznie przyspiesza eksportowanie modeli do wielu format&oacute;w druku 3D za pomoc&#261; jednego prostego polecenia.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=PartToVRML.png&amp;filetimestamp=20160203215226&amp;.html" class="mw-file-description"><img src="../File/PartToVRML.png" decoding="async" width="24" height="23" class="mw-file-element" data-file-width="64" data-file-height="62"></a></span> <a href="../pl/Macro_PartToVRML.html" title="Macro PartToVRML/pl">Makro PartToVRML</a></span>: Konwertuje wybrane cz&#281;&#347;ci na siatki VRML w celu zmniejszenia rozmiaru i przyspieszenia &#322;adowania <i>(modele VRML zgodne z programami Kicad i Blender)</i>.</li></ul>
 </div>
 </div>
@@ -420,34 +418,34 @@
 <li>W zak&#322;adce <b>Narz&#281;dzia</b> utw&oacute;rz nowy pasek narz&#281;dzi i dodaj swoje makro, wybieraj&#261;c je z kategorii <b>Makro</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260112191351
+Cached time: 20260113080943
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.504 seconds
-Real time usage: 1.582 seconds
-Preprocessor visited node count: 2889/1000000
+CPU time usage: 0.602 seconds
+Real time usage: 1.261 seconds
+Preprocessor visited node count: 2888/1000000
 Post&#8208;expand include size: 28047/2097152 bytes
 Template argument size: 15286/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1941/5000000 bytes
+Unstrip post&#8208;expand size: 1936/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  161.369      1 -total
- 25.34%   40.899    219 Template:MacroLink
-  6.02%    9.722      6 Template:MenuCommand
-  5.69%    9.187      1 Template:TOCright
-  5.16%    8.322      1 Template:True/pl
-  5.15%    8.304      3 Template:Button
-  3.76%    6.060      1 Template:Version/pl
-  3.68%    5.946      3 Template:Incode
-  3.23%    5.214      1 Template:False/pl
+100.00%   36.673      1 -total
+ 33.22%   12.182    219 Template:MacroLink
+  9.42%    3.456      1 Template:False/pl
+  6.01%    2.205      6 Template:MenuCommand
+  5.29%    1.941      1 Template:True/pl
+  3.99%    1.463      1 Template:TOCright
+  3.67%    1.347      1 Template:Version/pl
+  3.33%    1.220      3 Template:Incode
+  2.99%    1.095      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:222067-0!canonical and timestamp 20260112191349 and revision id 1737690. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:222067-0!canonical and timestamp 20260113080941 and revision id 1737804. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
