--- a/wiki/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/Macro_Cut_Object_For_Magnets.html
@@ -12,7 +12,7 @@ Macro Cut Object for Magnets
 <th class="ctOdd">Description
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Cut an object along a plane and add aligned magnet holes with surface collision detection. Creates two parts with perfectly aligned holes for embedding magnets that allow the parts to snap together.<br><br>Macro version: 0.5.0-beta<br>Last modified: 2026-01-05<br>FreeCAD version: 0.19+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/e/e3/Macro_Cut_Object_For_Magnets.png/48px-Macro_Cut_Object_For_Magnets.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
+<td class="ctEven left macro-description">Cut an object along a plane and add aligned magnet holes with surface collision detection. Creates two parts with perfectly aligned holes for embedding magnets that allow the parts to snap together.<br><br>Macro version: 0.6.1<br>Last modified: 2026-01-12<br>FreeCAD version: 0.19+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/e/e3/Macro_Cut_Object_For_Magnets.png/48px-Macro_Cut_Object_For_Magnets.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Author
@@ -36,13 +36,13 @@ Macro Cut Object for Magnets
 <th class="ctOdd">Macro Version
 </th></tr>
 <tr>
-<td class="ctEven macro-version">0.5.0-beta
+<td class="ctEven macro-version">0.6.1
 </td></tr>
 <tr>
 <th class="ctOdd">Date last modified
 </th></tr>
 <tr>
-<td class="ctEven macro-date">2026-01-05
+<td class="ctEven macro-date">2026-01-12
 </td></tr>
 <tr>
 <th class="ctOdd">FreeCAD Version(s)
@@ -191,8 +191,7 @@ Macro Cut Object for Magnets
 <h2><span class="mw-headline" id="Source_Code">Source Code</span></h2>
 <p>The full source code is hosted on GitHub:
 </p>
-<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro on GitHub</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository (freecad-robust-mcp-and-more)</a></li></ul>
+<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro on GitHub</a></li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Macro_Cut_Object_For_Magnets.png&amp;filetimestamp=20260106011212&amp;.html" class="mw-file-description"><img src="File/Macro_Cut_Object_For_Magnets.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b>Macro_Cut_Object_For_Magnets.FCMacro</b>
@@ -214,15 +213,15 @@ Macro Cut Object for Magnets
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260113120727
+Cached time: 20260113121922
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.082 seconds
+CPU time usage: 0.055 seconds
+Real time usage: 0.058 seconds
 Preprocessor visited node count: 168/1000000
-Post&#8208;expand include size: 3367/2097152 bytes
-Template argument size: 1267/2097152 bytes
+Post&#8208;expand include size: 3352/2097152 bytes
+Template argument size: 1252/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -230,13 +229,13 @@ Unstrip post&#8208;expand size: 712/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.617      1 -total
- 37.60%    2.864      1 Template:Macro
- 29.00%    2.209      1 Template:CodeDownload
- 25.79%    1.964      3 Template:FileName
+100.00%    4.540      1 -total
+ 54.47%    2.473      1 Template:Macro
+ 19.78%    0.898      3 Template:FileName
+ 18.55%    0.842      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260113120747 and revision id 1737810. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260113121939 and revision id 1737816. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
