--- a/wiki/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/Macro_Cut_Object_For_Magnets.html
@@ -206,19 +206,21 @@ Macro Cut Object for Magnets
 <p><br>
 </p>
 <h2><span class="mw-headline" id="Links">Links</span></h2>
-<ul><li><a href="Part_Slice.html" title="Part Slice">Part Slice</a> - FreeCAD's built-in slice tool.</li>
+<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Full Documentation</a> - Complete guides and tutorials.</li>
+<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Source code and issue tracker.</li>
+<li><a href="Part_Slice.html" title="Part Slice">Part Slice</a> - FreeCAD's built-in slice tool.</li>
 <li><a href="PartDesign_Hole.html" title="PartDesign Hole">PartDesign Hole</a> - Parametric hole feature documentation.</li>
 <li><a href="PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> - Body container documentation.</li></ul>
 <p><br>
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260113121922
+Cached time: 20260113122214
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.055 seconds
-Real time usage: 0.058 seconds
+CPU time usage: 0.066 seconds
+Real time usage: 0.070 seconds
 Preprocessor visited node count: 168/1000000
 Post&#8208;expand include size: 3352/2097152 bytes
 Template argument size: 1252/2097152 bytes
@@ -229,13 +231,13 @@ Unstrip post&#8208;expand size: 712/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.540      1 -total
- 54.47%    2.473      1 Template:Macro
- 19.78%    0.898      3 Template:FileName
- 18.55%    0.842      1 Template:CodeDownload
+100.00%    6.173      1 -total
+ 48.24%    2.978      1 Template:Macro
+ 23.39%    1.444      3 Template:FileName
+ 21.46%    1.325      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260113121939 and revision id 1737816. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260113122218 and revision id 1737817. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
