--- a/wiki/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/Macro_Cut_Object_For_Magnets.html
@@ -215,12 +215,12 @@ Macro Cut Object for Magnets
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260113122214
+Cached time: 20260113122355
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.066 seconds
-Real time usage: 0.070 seconds
+CPU time usage: 0.061 seconds
+Real time usage: 0.069 seconds
 Preprocessor visited node count: 168/1000000
 Post&#8208;expand include size: 3352/2097152 bytes
 Template argument size: 1252/2097152 bytes
@@ -231,13 +231,13 @@ Unstrip post&#8208;expand size: 712/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.173      1 -total
- 48.24%    2.978      1 Template:Macro
- 23.39%    1.444      3 Template:FileName
- 21.46%    1.325      1 Template:CodeDownload
+100.00%    5.091      1 -total
+ 47.38%    2.412      1 Template:Macro
+ 25.03%    1.274      3 Template:FileName
+ 22.43%    1.142      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260113122218 and revision id 1737817. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260113122355 and revision id 1737817. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
