--- a/wiki/Macro_Multi_Export.html
+++ b/wiki/Macro_Multi_Export.html
@@ -12,7 +12,7 @@ Macro Multi Export
 <th class="ctOdd">Description
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Export selected bodies to multiple file formats (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) simultaneously with a user-friendly dialog for format selection and output configuration.<br><br>Macro version: 0.5.0-beta<br>Last modified: 2026-01-05<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
+<td class="ctEven left macro-description">Export selected bodies to multiple file formats (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) simultaneously with a user-friendly dialog for format selection and output configuration.<br><br>Macro version: 0.6.1<br>Last modified: 2026-01-12<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Author
@@ -36,13 +36,13 @@ Macro Multi Export
 <th class="ctOdd">Macro Version
 </th></tr>
 <tr>
-<td class="ctEven macro-version">0.5.0-beta
+<td class="ctEven macro-version">0.6.1
 </td></tr>
 <tr>
 <th class="ctOdd">Date last modified
 </th></tr>
 <tr>
-<td class="ctEven macro-date">2026-01-05
+<td class="ctEven macro-date">2026-01-12
 </td></tr>
 <tr>
 <th class="ctOdd">FreeCAD Version(s)
@@ -114,8 +114,7 @@ Macro Multi Export
 <h2><span class="mw-headline" id="Source_Code">Source Code</span></h2>
 <p>The full source code is hosted on GitHub:
 </p>
-<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro on GitHub</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository (freecad-robust-mcp-and-more)</a></li></ul>
+<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro on GitHub</a></li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Macro_Multi_Export.png&amp;filetimestamp=20260106011316&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b>Macro_Multi_Export.FCMacro</b>
@@ -130,21 +129,23 @@ Macro Multi Export
 <p><br>
 </p>
 <h2><span class="mw-headline" id="Links">Links</span></h2>
-<ul><li><a href="Std_Export.html" title="Std Export">Std Export</a> - FreeCAD's built-in export function.</li>
+<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Full Documentation</a> - Complete guides and tutorials.</li>
+<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Source code and issue tracker.</li>
+<li><a href="Std_Export.html" title="Std Export">Std Export</a> - FreeCAD's built-in export function.</li>
 <li><a href="Import_Export.html" title="Import Export">Import Export</a> - Overview of FreeCAD import/export formats.</li></ul>
 <p><br>
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260113122419
+Cached time: 20260113122545
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.056 seconds
-Real time usage: 0.060 seconds
+CPU time usage: 0.053 seconds
+Real time usage: 0.061 seconds
 Preprocessor visited node count: 143/1000000
-Post&#8208;expand include size: 3192/2097152 bytes
-Template argument size: 1112/2097152 bytes
+Post&#8208;expand include size: 3177/2097152 bytes
+Template argument size: 1097/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -152,13 +153,13 @@ Unstrip post&#8208;expand size: 682/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.097      1 -total
- 46.13%    2.351      1 Template:Macro
- 26.56%    1.354      1 Template:CodeDownload
- 21.17%    1.079      3 Template:FileName
+100.00%    5.834      1 -total
+ 43.40%    2.532      1 Template:Macro
+ 28.11%    1.640      1 Template:CodeDownload
+ 24.26%    1.415      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260113122441 and revision id 1737823. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260113122548 and revision id 1737826. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
