--- a/wiki/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/Robust_MCP_Bridge_Workbench.html
@@ -1,22 +1,20 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Robust MCP Bridge Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Robust+MCP+Bridge+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="fr/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Atelier Robust MCP Bridge (2% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
-<figure typeof="mw:File/Thumb"><a href="index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Robust MCP Bridge workbench icon</figcaption></figure>
-<p><a href="index.php?title=Template;Workbench&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Workbench (page does not exist)">Template:Workbench</a>
-</p>
-<meta property="mw:PageProp/toc">
+<figure typeof="mw:File/Thumb"><a href="index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Robust MCP Bridge Workbench icon</figcaption></figure>
+<div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>The <b>Robust MCP Bridge Workbench</b> is the server-side connection point that bridges to the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a>, which enables external applications to control FreeCAD through the <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a>. The workbench runs inside FreeCAD and exposes XML-RPC and JSON-RPC interfaces that external MCP clients can connect to.
-</p><p>This workbench is designed to work with the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> (available on PyPI), which allows AI assistants like <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> to interact with FreeCAD through natural language. The full documentation and source code can be found at <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a>, where you will find the MCP Server, Bridge and some FreeCAD Macros used for various things, not necessarily related to AI or the MCP work.
+<p>The <b>Robust MCP Bridge Workbench</b> provides the server-side connection point that provides a bridge to the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a>, which enables external applications to control FreeCAD through the <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a>. The workbench runs inside FreeCAD and exposes XML-RPC and JSON-RPC interfaces that external MCP clients can connect to.
+</p><p>This workbench is designed to work with the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> (available on PyPI), which allows AI assistants like <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> to interact with FreeCAD through natural language. The full documentation and source code can be found at <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a>, where you will find the MCP Server, Bridge and some MFreeCAD acros used for various things, not necessary related to AI or the MCP work.
 </p><p><b>Key Features:</b>
 </p>
-<ul><li>Toolbar controls for starting/stopping the MCP bridge</li>
-<li>Status indicator showing connection state (green=running, red=stopped)</li>
-<li>XML-RPC server on configurable port (default: 9875)</li>
-<li>JSON-RPC socket server on configurable port (default: 9876)</li>
-<li>Headless mode support for automation and CI/CD pipelines</li>
-<li>Thread-safe queue system ensuring safe FreeCAD operations</li>
-<li>Configurable auto-start on FreeCAD launch</li></ul>
+<ul><li>Toolbar controls for starting/stopping the MCP bridge.</li>
+<li>Status indicator showing connection state (green=running, red=stopped).</li>
+<li>XML-RPC server on configurable port (default: 9875).</li>
+<li>JSON-RPC socket server on configurable port (default: 9876).</li>
+<li>Headless mode support for automation and CI/CD pipelines.</li>
+<li>Thread-safe queue system ensuring safe FreeCAD operations.</li>
+<li>Configurable auto-start on FreeCAD launch.</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
 <h3><span id="Via_Addon_Manager_.28Recommended.29"></span><span class="mw-headline" id="Via_Addon_Manager_(Recommended)">Via Addon Manager (Recommended)</span></h3>
 <ol><li>Open FreeCAD</li>
@@ -145,32 +143,31 @@
 </p>
 <h2><span class="mw-headline" id="Troubleshooting">Troubleshooting</span></h2>
 <h3><span id="Bridge_Won.27t_Start"></span><span class="mw-headline" id="Bridge_Won't_Start">Bridge Won't Start</span></h3>
-<ol><li>Check the FreeCAD Python console (<b>View &rarr; Panels &rarr; Python console</b>) for error messages</li>
-<li>Ensure no other process is using ports 9875/9876</li>
-<li>Try restarting FreeCAD</li></ol>
+<ol><li>Check the FreeCAD Python console (<b>View &rarr; Panels &rarr; Python console</b>) for error messages.</li>
+<li>Ensure no other process is using ports 9875/9876.</li>
+<li>Try restarting FreeCAD.</li></ol>
 <h3><span class="mw-headline" id="Connection_Refused">Connection Refused</span></h3>
-<ol><li>Verify the bridge is running (green status indicator in toolbar)</li>
-<li>Check that ports match between the workbench preferences and your MCP client configuration</li>
-<li>If connecting from Docker, use <code>host.docker.internal</code> instead of <code>localhost</code></li></ol>
+<ol><li>Verify the bridge is running (green status indicator in toolbar).</li>
+<li>Check that ports match between the workbench preferences and your MCP client configuration.</li>
+<li>If connecting from Docker, use <code>host.docker.internal</code> instead of <code>localhost</code>.</li></ol>
 <h3><span id="Headless_Mode_Won.27t_Start"></span><span class="mw-headline" id="Headless_Mode_Won't_Start">Headless Mode Won't Start</span></h3>
-<ol><li>Ensure you're using <code>freecadcmd</code> (not <code>freecad</code>)</li>
-<li>Verify the script path is correct for your installation</li>
-<li>Test FreeCAD first: <code>freecadcmd -c "print('test')"</code></li></ol>
+<ol><li>Ensure you're using <code>freecadcmd</code> (not <code>freecad</code>).</li>
+<li>Verify the script path is correct for your installation.</li>
+<li>Test FreeCAD first: <code>freecadcmd -c "print('test')"</code>.</li></ol>
 <h2><span class="mw-headline" id="Links">Links</span></h2>
-<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Full Documentation</a> - Complete guides, API reference, and tutorials</li>
-<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Source code and issue tracker</li>
-<li><a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server on PyPI</a> - The MCP client that connects to this bridge</li>
-<li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - The protocol specification</li></ul>
+<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Source code, documentation, and issue tracker.</li>
+<li><a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server on PyPI</a> - The MCP client that connects to this bridge.</li>
+<li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - The protocol specification.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113055533
+Cached time: 20260113122758
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.065 seconds
-Real time usage: 0.075 seconds
+CPU time usage: 0.060 seconds
+Real time usage: 0.064 seconds
 Preprocessor visited node count: 253/1000000
-Post&#8208;expand include size: 2136/2097152 bytes
+Post&#8208;expand include size: 2233/2097152 bytes
 Template argument size: 742/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 4/100
@@ -179,16 +176,16 @@ Unstrip post&#8208;expand size: 3108/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.101      1 -total
- 38.43%    4.266      5 Template:Incode
- 18.58%    2.063      4 Template:Code
- 10.98%    1.219      4 Template:MenuCommand
-  8.52%    0.946      3 Template:FileName
-  7.86%    0.872      3 Template:Button
-  5.79%    0.643      1 Template:Workbench
+100.00%    8.485      1 -total
+ 27.27%    2.314      4 Template:Code
+ 16.04%    1.361      1 Template:TOCright
+ 14.51%    1.231      5 Template:Incode
+ 11.23%    0.953      4 Template:MenuCommand
+  9.82%    0.833      3 Template:FileName
+  9.37%    0.795      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260113055539 and revision id 1737794. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260113122801 and revision id 1737832. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
