--- a/wiki/de/Macro_TechDraw_AuxiliaryView.html
+++ b/wiki/de/Macro_TechDraw_AuxiliaryView.html
@@ -2,7 +2,7 @@
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_TechDraw_AuxiliaryView.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro TechDraw AuxiliaryView (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_TechDraw_AuxiliaryView.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro TechDraw AuxiliaryView (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
-<div class="warning-box">FreeCADs Arbeitsbereich TechDraw l&auml;sst immer noch ein Werkzeug zum Erstellen von Hilfsansichten (auxiliary views) vermissen.<br>Diese Seite beschreibt einen Anwendungsfall und enth&auml;lt ein Makro, das eine M&ouml;glichkeit darstellt, eine Hilfsansicht zu erstellen.<br><br>Hoffentlich ist dies eine Anregung f&uuml;r einen C++ Programmierer, um diese Konzeptbest&auml;tigung in einen integriertem TechDraw-Befehl umzuwandeln. </div>
+<div class="warning-box">FreeCADs Arbeitsbereich TechDraw l&auml;sst immer noch ein Werkzeug zum Erstellen von Hilfsansichten (auxiliary views) vermissen.<br>Diese Seite beschreibt einen Anwendungsfall und enth&auml;lt ein Makro, das eine M&ouml;glichkeit darstellt, eine Hilfsansicht zu erstellen.<br><br>Hoffentlich ist dies eine Anregung f&uuml;r einen C++ Programmierer, um diesen Machbarkeitsnachweis in einen integrierten TechDraw-Befehl zu &uuml;berf&uuml;hren.</div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -420,15 +420,15 @@ if __name__ == "__main__":
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260107140019
+Cached time: 20260113140745
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.096 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.138 seconds
 Preprocessor visited node count: 268/1000000
-Post&#8208;expand include size: 26637/2097152 bytes
-Template argument size: 20232/2097152 bytes
+Post&#8208;expand include size: 26642/2097152 bytes
+Template argument size: 20237/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -436,19 +436,19 @@ Unstrip post&#8208;expand size: 10897/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.161      1 -total
- 28.21%    7.663      1 Template:TechDraw_Tools_navi/de
- 20.64%    5.607      1 Template:Macro/de
- 19.39%    5.267      2 Template:Navigation_menu_2
- 12.18%    3.308      1 Template:VeryImportantMessage
-  9.86%    2.678      1 Template:Userdocnavi/de
-  7.27%    1.975      1 Template:Caption
-  6.98%    1.895      1 Template:MacroCode
-  6.82%    1.852      1 Template:Clear
-  4.84%    1.315      1 Template:Button
+100.00%   36.080      1 -total
+ 28.91%   10.430      1 Template:TechDraw_Tools_navi/de
+ 19.23%    6.938      2 Template:Navigation_menu_2
+ 17.04%    6.149      1 Template:Macro/de
+ 16.10%    5.808      1 Template:Userdocnavi/de
+  8.57%    3.091      1 Template:Caption
+  8.23%    2.970      1 Template:MacroCode
+  8.04%    2.900      1 Template:VeryImportantMessage
+  5.31%    1.917      1 Template:Clear
+  4.98%    1.797      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260107140019 and revision id 1728861. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113140744 and revision id 1737849. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
